operators/multiclusterobservability/bundle/manifests/mcoa_networking.k8s.io_v1_networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: multicluster-observability-addon
  namespace: open-cluster-management-observability
spec:
  podSelector:
    matchLabels:
      app: multicluster-observability-addon-manager
  ingress:
    - ports:
        - protocol: TCP
          port: 8444
  egress:
    - {}
  policyTypes:
    - Ingress
    - Egress
