operators/multiclusterobservability/bundle/manifests/observatorium-operator_networking.k8s.io_v1_networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: observability-observatorium-operator
  namespace: open-cluster-management-observability
spec:
  podSelector:
    matchLabels:
      control-plane: observatorium-operator
      observability.open-cluster-management.io/name: observability
  ingress: []
  # needs api-server access
  egress:
    - {}
  policyTypes:
    - Ingress
    - Egress
