operators/multiclusterobservability/bundle/manifests/thanos-query_networking.k8s.io_v1_networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: thanos-query
  namespace: open-cluster-management-observability
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: thanos-query
      app.kubernetes.io/part-of: observatorium
  ingress:
    - ports:
        - port: 9090
          protocol: TCP
    # gprc
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: open-cluster-management-observability
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-monitoring
      ports:
        - port: 10901
          protocol: TCP
  egress:
    - {}
  policyTypes:
    - Ingress
    - Egress
