operators/multiclusterobservability/bundle/manifests/thanos-receive-controller_networking.k8s.io_v1_networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: thanos-receive-controller
  namespace: open-cluster-management-observability
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: observability
      app.kubernetes.io/name: thanos-receive-controller
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
              app.kubernetes.io/part-of: openshift-monitoring
      ports:
        - port: 8080
          protocol: TCP
  policyTypes:
    - Ingress
