operators/multiclusterobservability/bundle/manifests/thanos-rule_networking.k8s.io_v1_networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: thanos-rule
  namespace: open-cluster-management-observability
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: thanos-rule
      app.kubernetes.io/part-of: observatorium
  ingress:
    - ports:
        # configmap reloader, prometheus metrics
        - port: 9533
          protocol: TCP
        # http
        - port: 10902
          protocol: TCP
    # gprc
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: open-cluster-management-observability
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-monitoring
      ports:
        - port: 10901
          protocol: TCP

  # for S3
  egress:
    - {}
  policyTypes:
    - Ingress
    - Egress
