operators/multiclusterobservability/bundle/manifests/thanos-store_networking.k8s.io_v1_networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: thanos-store
  namespace: open-cluster-management-observability
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: object-store-gateway
      app.kubernetes.io/instance: observability
      app.kubernetes.io/name: thanos-store
      app.kubernetes.io/part-of: observatorium
  ingress:
    - ports:
        # http metrics
        - port: 10902
          protocol: TCP
    # from queriers over grpc
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: observability
              app.kubernetes.io/name: thanos-query
              app.kubernetes.io/part-of: observatorium
      ports:
        - port: 10901
          protocol: TCP
  # egress out to S3
  egress:
    - {}
  policyTypes:
    - Ingress
    - Egress
